# stack-overflow-fun

./: Makefile  README.md  publicapi.py  pyproject.toml
apps/appGraphql/: apps.py
apps/stackoverflow/: models.py  schema.py
apps/stackoverflow/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  schema.py
apps/users/migrations/: 0001_initial.py
apps/utils/: utils.py
config/: urls.py
config/settings/: __init__.py  base.py
config/settings/templates/: settings.dev.py
config/settings/utils/: __init__.py
