[tool.poetry]
name = "stack-overflow-fun"
version = "0.1.0"
description = ""
authors = ["Matvey <matveykawork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
django = "^4.2.6"
graphene = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
