[tool.poetry]
name = "stack-overflow-fun"
version = "0.1.0"
description = ""
authors = ["Matvey <matveykawork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
psycopg2-binary = "^2.9.9"
django = "^4.2.6"
graphene-django = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
